fixed horizontal scroll on welcome page

--- a/src/components/welcome-view/welcomeView.css
+++ b/src/components/welcome-view/welcomeView.css
@@ -1,5 +1,5 @@
 .welcome {
-  width: 100%;
+  max-width: 100%;
   padding: 1.5em;
 }
 
